--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
 body {
-    background-color: aquamarine;
-    color: blue;
+    background-color: rgb(193, 255, 234);
+    color: rgb(0, 55, 20);
 }
