--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
     background-color: rgb(193, 255, 234);
     color: rgb(0, 55, 20);
