--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
 body {
     background-color: rgb(193, 255, 234);
     color: rgb(0, 55, 20);
+}
+
+article { // Testing
+    background-color: rgb(255, 255, 255);
 }
