--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,14 +6,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 body {
     background-color: rgb(193, 255, 234);
     color: rgb(0, 55, 20);
 }
-
-article { // Testing
+/* Testing */
+article, button { 
     background-color: rgb(255, 255, 255);
 }
